--- a/student.html
+++ b/student.html
@@ -8,6 +8,13 @@
     <header>
         <div class="container nav-row">
             <a class="brand" href="index.html"><div class="logo">GG</div>GreenGrocer</a>
+			
+			<div class="menu-trigger" id="menuTrigger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+		
             <nav class="nav-links">
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -20,6 +27,17 @@
                 </ul>
             </nav>
         </div>
+		
+		<div id="mobileMenu" class="mobile-menu-overlay">
+        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="promotions.html">Promotions</a>
+        <a href="stores.html">Stores</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Contact</a>
+        <a href="shop now.html" class="cta-mobile">Shop Now <span id="cart-count-mobile"></span></a>
+        </div>
+	
     </header>
 	
 	<main class="container">
