--- a/cleaner.html
+++ b/cleaner.html
@@ -8,6 +8,13 @@
     <header>
         <div class="container nav-row">
             <a class="brand" href="index.html"><div class="logo">GG</div>GreenGrocer</a>
+			
+			<div class="menu-trigger" id="menuTrigger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+		
             <nav class="nav-links">
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -20,6 +27,17 @@
                 </ul>
             </nav>
         </div>
+		
+		<div id="mobileMenu" class="mobile-menu-overlay">
+        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="promotions.html">Promotions</a>
+        <a href="stores.html">Stores</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Contact</a>
+        <a href="shop now.html" class="cta-mobile">Shop Now <span id="cart-count-mobile"></span></a>
+    </div>
+	
     </header>
 	
 	<main class="container">
@@ -95,47 +113,53 @@
             <button class="add-btn">Add to Cart</button>
         </div>
 
-  <footer>
-    <div class="container footer-content">
-        <div class="footer-column brand-col">
-            <div class="brand-row">
-                <div class="logo">GG</div>
-                <div>
-                    <span class="footer-brand-name">GreenGrocer</span><br>
-                    <small class="tagline">Affordable essentials • Discount prices</small>
+    </main> 
+	
+	<footer>
+        <div class="container footer-content">
+            <div class="footer-column brand-col">
+                <div class="brand-row">
+                    <div class="logo">GG</div>
+                    <div>
+                        <span class="footer-brand-name">GreenGrocer</span><br>
+                        <small class="tagline">Affordable essentials • Discount prices</small>
+                    </div>
                 </div>
+                <p class="footer-desc">
+                    GreenGrocer — designed for fast, accessible shopping for everyday supplies. 
+                </p>
             </div>
-            <p class="footer-desc">
-                GreenGrocer — designed for fast, accessible shopping for everyday supplies. 
-            </p>
+
+            <div class="footer-column">
+                <h4>Quick Links</h4>
+                <ul class="footer-links">
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="promotions.html">Promotions</a></li>
+                    <li><a href="stores.html">Our Stores</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h4>Contact</h4>
+                <p>support@greengrocer.com</p>
+                <p>+60 13-9114556</p>
+                <p>+60 11-59509882</p>
+                <p>+60 17-5639458</p>
+            </div>
         </div>
 
-        <div class="footer-column">
-			<h4>Quick Links</h4>
-			<ul class="footer-links">
-			<li><a href="products.html">Products</a></li>
-			<li><a href="promotions.html">Promotions</a></li>
-			<li><a href="stores.html">Our Stores</a></li>
-			<li><a href="about.html">About Us</a></li>
-			<li><a href="contact.html">Contact Us</a></li>
-			</ul>
-		</div>
-
-        <div class="footer-column">
-            <h4>Contact</h4>
-            <p>support@greengrocer.</p>
-            <p>+60 13-9114556</p>
-			<p>+60 11-59509882</p>
-			<p>+60 17-5639458</p>
+        <div class="footer-bottom">
+            <div class="container">
+                © <span id="year">2026</span> GreenGrocer. All Rights Reserved.
+            </div>
         </div>
-    </div>
+    </footer>
 
-    <div class="footer-bottom">
-        <div class="container">
-            © <span id="year">2026</span> GreenGrocer. All Rights Reserved.
-        </div>
-    </div>
-</footer>
+    <script src="javascript.js"></script>
+</body>
+</html>
 
     <script src="javascript.js"></script>
 </body>
