--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,12 @@
                     <div style="font-size:12px;color:var(--muted);margin-top:2px">Discount essentials</div>
                 </div>
             </a>
+			
+			<div class="menu-trigger" id="menuTrigger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
       <nav class="nav-links">
   <ul>
     <li><a href="index.html">Home</a></li>
@@ -27,6 +33,17 @@
   </ul>
 </nav>
     </div>
+	
+	<div id="mobileMenu" class="mobile-menu-overlay">
+        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="promotions.html">Promotions</a>
+        <a href="stores.html">Stores</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Contact</a>
+        <a href="shop now.html" class="cta-mobile">Shop Now <span id="cart-count-mobile"></span></a>
+    </div>
+	
   </header>
 
   <main class="container">
