--- a/index.html
+++ b/index.html
@@ -1,42 +1,50 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>GreenGrocer — Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GreenGrocer – Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header aria-label="Main header">
-        <div class="container nav-row">
-            <a class="brand" href="index.html">
-                <div class="logo">GG</div>
-                <div>
-                    <div style="font-size:15px">GreenGrocer</div>
-                    <div style="font-size:12px;color:var(--muted);margin-top:2px">Discount essentials</div>
-                </div>
-            </a>
+    <div class="container nav-row">
+        <a class="brand" href="index.html">
+            <div class="logo">GG</div>
+            <div>
+                <div style="font-size:15px">GreenGrocer</div>
+                <div style="font-size:12px;color:var(--muted);margin-top:2px">Discount essentials</div>
+            </div>
+        </a>
 
-            <nav class="nav-links">
-                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="promotions.html">Promotions</a></li>
-                    <li><a href="stores.html">Stores</a></li>
-					<li><a href="about.html">About Us</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a class="cta" href="shop now.html">Shop Now <span id="cart-count"></span></a></li>
-                </ul>
-            </nav>
+        <div class="menu-trigger" id="menuTrigger">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
-        
-        <div id="mobileMenu" class="mobile-menu-overlay">
-            <a href="index.html">Home</a>
-            <a href="products.html">Products</a>
-            <a href="promotions.html">Promotions</a>
-            <a href="stores.html">Stores</a>
-            <a href="contact.html">Contact</a>
-            <a href="shop now.html" class="cta-mobile">Shop Now</a>
-        </div>
-    </header>
+
+        <nav class="nav-links">
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="promotions.html">Promotions</a></li>
+                <li><a href="stores.html">Stores</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a class="cta" href="shop now.html">Shop Now <span id="cart-count"></span></a></li>
+            </ul>
+        </nav>
+    </div>
+    
+    <div id="mobileMenu" class="mobile-menu-overlay">
+        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="promotions.html">Promotions</a>
+        <a href="stores.html">Stores</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Contact</a>
+        <a href="shop now.html" class="cta-mobile">Shop Now <span id="cart-count-mobile"></span></a>
+    </div>
+</header>
 
     <main>
         <section class="hero-section">
@@ -59,8 +67,8 @@
 
         <section class="container" style="margin-bottom: 60px;">
 			<div class="carousel">
-			<button class="carousel-prev" id="prevBtn">❮</button>
-			<button class="carousel-next" id="nextBtn">❯</button>
+			<button class="carousel-prev" id="prevBtn">◄</button>
+			<button class="carousel-next" id="nextBtn">►</button>
 
 			<div class="slides" id="slides">
             <div class="slide bg-pantry">
@@ -96,7 +104,7 @@
                 </div>
             </div>
             <p class="footer-desc">
-                GreenGrocer — designed for fast, accessible shopping for everyday supplies. 
+                GreenGrocer – designed for fast, accessible shopping for everyday supplies. 
             </p>
         </div>
 
